[tool.poetry]
name = "streamdeckiconpackgenerator"
version = "0.1.0"
description = ""
authors = ["SteffoSpieler <steffo@steffospieler.de>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
